# srtglot

./: .gitignore  .mypy.ini  .pre-commit-config.yaml  Dockerfile  README.md  hod-fr.srt  pyproject.toml
src/: transcribe.py
src/srt_gpt_translator/: cache.py  cli.py  languages.py  model.py  parser.py  prompt.jinja  sentence.py  translator.py
src/srt_gpt_translator/translator/: prompt.jinja
src/srtglot/: adaptive.py  batch.py  cache.py  cli.py  completions.py  config.py  context.py  fallback.py  languages.py  logging.py  model.py  output.py  parser.py  prompt.jinja  prompt.py  renderer.py  sentence.py  statistics.py  translator.py
src/srtglot/translator/: __init__.py  adaptive.py  batch.py
tests/: fixtures.py  hod.srt  test_adaptive.py  test_cache.py  test_completions.py  test_context.py  test_fallback.py  test_integration.py  test_model.py  test_parser.py  test_prompt.py  test_sentence.py  test_translate.py
