[tool.poetry]
name = "srtglot"
version = "0.1.0"
description = ""
authors = ["blav <blav@actar.us>"]
readme = "README.md"

[[tool.poetry.packages]]
include = "srtglot"
from = "src"

[tool.poetry.dependencies]
python = ">=3.11"
openai = "*"
tqdm = "*"
click = "*"
python-dotenv = "*"
rich-click = "*"
pysrt = "*"
beautifulsoup4 = "*"
pydantic = "*"
tiktoken = "*"
jinja2 = "*"
tenacity = "*"
rich = "*"
aiofiles = "*"


[tool.poetry.scripts]
srtglot = "srtglot.cli:main"


[tool.poetry.group.dev.dependencies]
pytest = "*"
mypy = "*"
pytest-asyncio = "*"
types-aiofiles = "*"
pre-commit = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
